--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,11 @@
 <h1>doggo</h1>
-<%= image_tag '' 
+<%= image_tag 'IMG_6296.jpeg', size: '1000x620' %>
+<div>
+  <p>愛犬とのくらしを</p>
+  <p>もっと豊かに鮮やかに</p>
+</div>
+
+<div>
+  <h5>お出かけスポットを探す</h5>
+  <
+</div>
