[Fix]新規登録画面修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
              <%= link_to "map", places_path ,class:"link"%>
             </li>
             <li>
-              <%= link_to "マイページ", user_path(user_id) ,class:"link"%>
+              <%= link_to "マイページ", user_path(current_user) ,class:"link"%>
             </li>
             <li>
               <%= link_to "新規投稿",new_post_path ,class:"link"%>
