--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" 
-<p>Find me in app/views/users/show.html.erb</p>
+<%= attachment_image_tag @user, :profile_image_id,:fill, 100, 100, format:'jpeg', fallback:"" %>
+<%= @user.name %>
+<%= link_to "プロフィールを編集", edit_user_path %>
