[Add]ユーザー情報編集画面作成

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<%= form_with model:@user, local:true do |f| %>
+  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
+  <label for="inputImage">プロフィール画像を変更</label>
+  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+  <label for="inputName">ユーザーネーム</label>
+  <%= f.text_field :name, autofocus: true, placeholder:"ユーザーネーム"%>
+  <label for="inputEmail">メールアドレス</label>
+  <%= f.email_field :email, autofocus: true, placeholder:"email"%>
+  <%= f.submit "変更を保存" %>
+<% end %>
