--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% @posts.each do |post| %>
+<div>
+  <%= attachment_image_tag post.user.profile_image, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
+  <%= post.user.name %>d
+  <%= attachment_image_tag post, :image %>
+  <p><%= post.body %></p>
+</div>
+<% end %>
