--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,10 @@
-<%= attachment_image_tag @user, :profile_image_id,:fill, 100, 100, format:'jpeg', fallback:"" %>
+<%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
 <%= @user.name %>
-<%= link_to "プロフィールを編集", edit_user_path %>
+<%= link_to "プロフィールを編集", edit_user_path(@user.id) %>
+<% @posts.each do |post| %>
+<!--<div>-->
+  <%= link_to post_path(post.id) do %>
+    <%= attachment_image_tag post, :image %>
+  <% end %>
+ <% end %>
+
