--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Places#edit</h1>
-<p>Find me in app/views/places/edit.html.erb</p>
+<h3>施設詳細データを編集する</h3>
+<%= form_with model: @place, url: place_path, local:true do |f| %>
+  <h4>画像</h4>
+  <%= f.attachment_field :image %>
+
+  <h4>施設名</h4>
+  <%= f.text_field :name %>
+
+  <h4>場所</h4>
+  <%= f.text_field :address %>
+
+  <h4>料金</h4>
+  <%= f.text_field :price %>
+
+  <H4>カテゴリー</H4>
+  <%= f.radio_button :category, Place.categories.key(0), checked: true %>
+  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
+  <%= f.label "ドッグラン" %>
+  <%= f.radio_button :category, Place.categories.key(1) %>
+  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
+  <%= f.label "ドッグカフェ" %>
+  <%= f.radio_button :category, Place.categories.key(2) %>
+  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
+  <%= f.label "カフェ・レストラン（犬の店内利用可）" %>
+  <%= f.radio_button :category, Place.categories.key(3) %>
+  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
+  <%= f.label "公園" %>
+  <%= f.radio_button :category, Place.categories.key(4) %>
+  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
+  <%= f.label "自然" %>
+
+  <h4>詳細</h4>
+  <%= f.text_area :detail %>
+  <%= f.submit '投稿' %>
+<% end %>
+
