--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Places#index</h1>
-<p>Find me in app/views/places/index.html.erb</p>
+<% @places.each do |place| %>
+<div>
+  <%= link_to place_path(place.id) do %>
+  <%= attachment_image_tag place, :image, format: 'jpeg', size: "300x300" %><br>
+  <%= place.name %>
+  <% end %>
+  <%= place.category_i18n %>
+  <%= place.address %>
+</div>
+<% end %>
