--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,21 @@
 <h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %><br>
+<p><%= @post.body %></p>
+
+<div>
+<p>コメント件数：<%= @post.comments.count %></p>
+<% @post.comments.each do |comment| %>
+  <%= comment.user.name %>
+  <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+<% end %>
+</div>
+<div>
+<%= form_with(model:[@post, @comment], local: true) do |f| %>
+  <%= f.text_area :comment, rows:'5',placeholder: "コメント入力" %>
+  <%= f.submit "投稿" %>
+<% end %>
+</div>
+
+<%= link_to '編集する', edit_post_path(@post.id) %><br>
+<%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？" %><br>
+<%= link_to '投稿一覧ページへ', posts_path %>
