--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
 <%= form_with model: @post, url: posts_path, local:true do |f| %>
   <h4>画像</h4>
   <%= f.attachment_field :image %>
-  <%#= f.collection_select :place_id, Place.all, :name %>
+  <%= f.collection_select :place_id, Place.all, :name %>
   <h4>本文</h4>
   <%= f.text_area :body %>
   <%= f.submit '投稿' %>
