--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,25 @@
 <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
 <%= @user.name %>
 <%= link_to "プロフィールを編集", edit_user_path(@user.id) %>
+<% if current_user != @user %>
+  <% if current_user.following?(@user) %>
+    <%= link_to 'フォロー外す', user_relationships_path(@user.id), method: :delete, class: "btn-sm btn-danger" %>
+    <% else %>
+    <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST, class:"btn-sm btn-success" %>
+  <% end %>
+<% end %>
+
+<%= link_to follows_user_path(@user) do %>
+  <h6>フォロー<%= @following_users.count %></h6>
+<% end %>&nbsp;&nbsp;
+<%= link_to followers_user_path(@user) do %>
+  <h6>フォロワー<%= @follower_users.count %></h6>
+<% end %>
+
 <% @posts.each do |post| %>
 <!--<div>-->
   <%= link_to post_path(post.id) do %>
     <%= attachment_image_tag post, :image %>
   <% end %>
- <% end %>
+<% end %>
 
