--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model:@user, local:true do |f| %>
-  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
+  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image"%>
   <label for="inputImage">プロフィール画像を変更</label>
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
   <label for="inputName">ユーザーネーム</label>
