--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,16 @@
  *= require_tree .
  *= require_self
  */
- @import "bootstrap";
+@import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+.profile_image {
+  border-radius: 50%;
+}
+
+.marker-image {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
