--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <% @posts.each do |post| %>
 <div>
-  <%= attachment_image_tag post.user.profile_image, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
+  <%= attachment_image_tag post.user.profile_image, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image" %>
   <%= post.user.name %>d
   <%= attachment_image_tag post, :image %>
   <%= post.created_at.strftime('%Y/%m/%d') %>
@@ -8,3 +8,4 @@
   <%= post.body %>
 </div>
 <% end %>
+<%= paginate @posts %> 
