--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,40 @@
-<h1>Posts#show</h1>
 <%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %><br>
 <p><%= @post.body %></p>
+<% if @post.liked_by?(current_user) %>
+  <p>
+    <%= link_to likes_path(@post), method: :delete do %>
+      ♥<%= @post.likes.count %> いいね
+    <% end %>
+  </p>
+<% else %>
+  <p>
+    <%= link_to likes_path(@post), method: :post do %>
+      ♡<%= @post.likes.count %> いいね
+    <% end %>
+  </p>
+<% end %>
 
 <div>
-<p>コメント件数：<%= @post.comments.count %></p>
-<% @post.comments.each do |comment| %>
-  <%= comment.user.name %>
-  <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-<% end %>
+  <p>コメント件数：<%= @post.comments.count %></p>
+  <% @post.comments.each do |comment| %>
+    <%= comment.user.name %>
+    <%= comment.created_at.strftime('%Y/%m/%d') %>
+    <%= comment.comment %>
+    <% if post_comment.user == current_user %>
+    <div>
+      <%= link_to "削除", comment_path(comment.post, comment), method: :delete %>
+    </div>
+    <% end %>
+  <% end %>
 </div>
 <div>
-<%= form_with(model:[@post, @comment], local: true) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメント入力" %>
-  <%= f.submit "投稿" %>
-<% end %>
+  <%= form_with(model:[@post, @comment], local: true) do |f| %>
+    <%= f.text_area :comment, rows:'5',placeholder: "コメント入力" %>
+    <%= f.submit "投稿" %>
+  <% end %>
 </div>
-
-<%= link_to '編集する', edit_post_path(@post.id) %><br>
-<%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？" %><br>
+ <% if @post.user == current_user %>
+  <%= link_to '編集する', edit_post_path(@post.id) %><br>
+  <%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？" %><br>
+<% end %>  
 <%= link_to '投稿一覧ページへ', posts_path %>
