--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,48 @@
-<h2>新規登録</h2>
+<div class="container my-4">
+  <div class="row mb-4">
+    <h2>新規登録</h2>
+  </div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+<div class="row mb-2">
+  <label for="exampleFormControlInput1" class="form-label">
+    <%= f.label "ユーザーネーム" %>
+  </label>
+  <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", id: "exampleFormControlInput1" %>
+</div>
 
-  <div class="field">
-    <%= f.label "ユーザーネーム" %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
+<div class="row mt-4">
+  <label for="exampleFormControlInput1" class="form-label">
+    <%= f.label "メールアドレス" %>
+  </label>
+  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "exampleFormControlInput1" %>
+</div>
 
-  <div class="field">
-    <%= f.label "メールアドレス" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
+<div class="row mt-4">
+  <label for="exampleFormControlInput1" class="form-label">
     <%= f.label "パスワード" %>
+  </label>
     <% if @minimum_password_length %>
-    <em>（<%= @minimum_password_length %> 文字以上で入力してください。）</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <em>（<%= @minimum_password_length %> 文字以上で入力してください。）</em>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control", id: "exampleFormControlInput1" %>
+</div>
 
-  <div class="field">
-    <%= f.label "パスワード（確認用）" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+<div class="row mt-4">
+  <label for="exampleFormControlInput1" class="form-label">
+    <%= f.label "パスワード（確認用）" %>
+  </label>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", id: "exampleFormControlInput1" %>
+</div>
 
-  <div class="actions">
-    <%= f.submit "登録する" %>
-  </div>
+<div class="row mt-4 mb-3">
+    <%= f.submit "登録する", class: "btn btn-outline-info" %>
+</div>
 <% end %>
 
-<p>アカウントをお持ちの方はこちらから</p>
-<%= link_to "ログイン", new_user_session_path %>
+<div class="row mt-4">
+<p>※アカウントをお持ちの方はこちらから
+  <%= link_to "ログイン", new_user_session_path %>
+</p>
+</div>
