--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
-<h1>doggo</h1>
-<%= image_tag 'IMG_6296.jpeg', size: '1000x620' %>
+
+  <%= image_tag 'IMG_6296.jpeg',class: "w-100" %>
 <div>
   <p>愛犬とのくらしを</p>
   <p>もっと豊かに鮮やかに</p>
@@ -7,5 +7,4 @@
 
 <div>
   <h5>お出かけスポットを探す</h5>
-  <
-</div>
+
