--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,51 +11,58 @@
 
   <body>
     <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="/">
-      <span><%= link_to "doggo",root_path %></span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-
-          <% if user_signed_in? %>
-            <li>
-              <%= link_to "home", root_path ,class:"link"%>
-            </li>
-            <li>
-             <%= link_to "map", places_path ,class:"link", data: { turbolinks: 'false' }%>
-            </li>
-            <li>
-              <%= link_to "マイページ", user_path(current_user) ,class:"link"%>
-            </li>
-            <li>
-              <%= link_to "新規投稿",new_post_path ,class:"link"%>
-            </li>
-          　<li>
-              <%= link_to "ログアウト",destroy_user_session_path, method: :delete  ,class:"link"%>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to "home", root_path ,class:"link"%>
-            </li>
-            <li>
-              <%= link_to "map", places_path ,class:"link" %>
-            </li>
-            <li>
-              <%= link_to "新規登録", new_user_registration_path, class:"link"%>
-            </li>
-            <li>
-              <%= link_to "ログイン", new_user_session_path, class:"link"%>
-            </li>
-          <% end %>
-
-        </ul>
-      </div>
-    </div>
-    </nav>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <span>
+              <%= link_to root_path do %>
+              <%= image_tag 'doggo.png', size: '150x50' %>
+              <% end %>
+            </span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to "home", root_path ,class:"nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "map", places_path ,class:"nav-link active", data: { turbolinks: 'false' }%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "マイページ", user_path(current_user) ,class:"nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "新規投稿",new_post_path ,class:"nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログアウト",destroy_user_session_path, method: :delete  ,class:"nav-link active"%>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "home", root_path ,class:"nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "map", places_path ,class:"nav-link active" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "新規登録", new_user_registration_path, class:"nav-link active"%>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログイン", new_user_session_path, class:"nav-link active"%>
+                </li>
+              <% end %>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
     <%= yield %>
   </body>
