--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <% @posts.each do |post| %>
 <div>
-  <%= attachment_image_tag post.user.profile_image, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image" %>
-  <%= post.user.name %>d
-  <%= attachment_image_tag post, :image %>
+  <%#= attachment_image_tag post, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image" %>
+  <%= post.user.name %>
+  <%= attachment_image_tag post, :image ,:fill, 300, 300 %>
   <%= post.created_at.strftime('%Y/%m/%d') %>
   <!--投稿日時-->
   <%= post.body %>
 </div>
 <% end %>
-<%= paginate @posts %> 
+<%= paginate @posts %>
