--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,12 @@
               <% end %>
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ml-auto">
               <% if user_signed_in? %>
-                <li class="nav-item">
-                  <%= link_to "home", root_path ,class:"nav-link active"%>
-                </li>
                 <li class="nav-item">
                   <%= link_to "map", places_path ,class:"nav-link active", data: { turbolinks: 'false' }%>
                 </li>
@@ -42,9 +39,6 @@
                   <%= link_to "ログアウト",destroy_user_session_path, method: :delete  ,class:"nav-link active"%>
                 </li>
               <% else %>
-                <li class="nav-item">
-                  <%= link_to "home", root_path ,class:"nav-link active"%>
-                </li>
                 <li class="nav-item">
                   <%= link_to "map", places_path ,class:"nav-link active" %>
                 </li>
