[Improve]レイアウトの調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,8 @@
   height: 200px;
   object-fit: cover;
 }
+
+// フォント設定
+.wf-mplus1p { font-family: "M PLUS 1p"; }
+
+.wf-kokoro { font-family: "Kokoro"; }
