--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,46 @@
-
-  <%= image_tag 'IMG_6296.jpeg',class: "w-100" %>
-<div>
-  <p>愛犬とのくらしを</p>
-  <p>もっと豊かに鮮やかに</p>
+<div class="container-fluid wf-mplus1p">
+  <div class="carousel slide" id="sample" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#sample" data-slide-to="0" class="active"></li>
+      <li data-target="#sample" data-slide-to="1"></li>
+      <li data-target="#sample" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+    <div class="carousel-item active"><%= image_tag 'top1.jpeg', class: "d-block w-100" %>
+      <div class="carousel-caption d-none d-sm-block ">
+        <h2>愛犬とのくらしを</h3>
+        <h2>もっと豊かに</h3>
+      </div>
+    </div>
+    <div class="carousel-item"><%= image_tag 'top2.jpeg', class: "d-block w-100" %>
+      <div class="carousel-caption d-none d-sm-block">
+        <h2>ドッグランやカフェに</h3>
+        <h2>一緒にお出かけ</h3>
+      </div>
+    </div>
+    <div class="carousel-item"><%= image_tag 'top3.jpeg', class: "d-block w-100" %>
+      <div class="carousel-caption d-none d-sm-block">
+        <h2>近くの飼い主さんとのつながりで</h3>
+        <h2>より充実した休日を</h3>
+      </div>
+    </div>
+    <a href="#sample" class="carousel-control-prev" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+      <span class="sr-only">前の画像へ</span>
+    </a>
+    <a href="#sample" class="carousel-control-next" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+      <span class="sr-only">次の画像へ</span>
+    </a>
+  </div>
+</div>
+<div class="container wf-mplus1p">
+  <h2 class="m-3">愛犬との暮らしを豊かにするお出かけを</h2>
+  <h3 class="m-3">お出かけスポットを探す</h3>
 </div>
 
-<div>
-  <h5>お出かけスポットを探す</h5>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
