--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,24 @@
-<%= form_with model:@user, local:true do |f| %>
-  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image"%>
-  <label for="inputImage">プロフィール画像を変更</label>
-  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-  <label for="inputName">ユーザーネーム</label>
-  <%= f.text_field :name, autofocus: true, placeholder:"ユーザーネーム"%>
-  <label for="inputEmail">メールアドレス</label>
-  <%= f.email_field :email, autofocus: true, placeholder:"email"%>
-  <%= f.submit "変更を保存" %>
-<% end %>
+<div class="container my-4 wf-mplus1p">
+  <%= form_with model:@user, local:true do |f| %>
+    <div class="row m-1">
+      <div class="col-sm-4">
+        <%= attachment_image_tag @user, :profile_image,:fill, 200, 200, format:'jpeg', fallback:"", class: "profile_image"%>
+      </div>
+      <div class="col-sm-8">
+        <label for="inputImage">プロフィール画像を変更</label>
+        <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+      </div>
+    </div>
+    <div class="m-1">
+      <label for="inputName">ユーザーネーム</label>
+      <%= f.text_field :name, autofocus: true, placeholder:"ユーザーネーム", class: "form-control", id: "exampleFormControlInput1"%>
+    </div>
+    <div class="m-1">
+      <label for="inputEmail">メールアドレス</label>
+      <%= f.email_field :email, autofocus: true, placeholder:"email", class: "form-control", id: "exampleFormControlInput1"%>
+    </div>
+    <div class="mt-4 mb-3 mx-1">
+      <%= f.submit "変更を保存", class: "btn btn-outline-info" %>
+    </div>
+  <% end %>
+</div>
