--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,26 @@
-<h2>ログインできない場合</h2>
-<p>登録したネールアドレスを入力してください。</p>
-<p>アカウントにアクセスするためのリンクをお送りします。</p>
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="container my-4 wf-mplus1p">
+  <h2 class="mb-4 mx-1">ログインできない場合</h2>
+  <div class="m-1">
+    <p>登録したネールアドレスを入力してください。</p>
+    <p>アカウントにアクセスするためのリンクをお送りします。</p>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label "メールアドレス" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="m-1">
+        <label for="exampleFormControlInput1" class="form-label">
+          <%= f.label "メールアドレス" %><br />
+        </label>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "exampleFormControlInput1" %>
+      </div>
+
+      <div class="mt-4 mb-3 mx-1">
+        <%= f.submit "ログインリンクを送信", class: "btn btn-outline-info" %>
+      </div>
+    <% end %>
+
+    <div class="mt-4 mx-1">
+      <%= link_to "新しいアカウントを作成する", new_user_registration_path %> |
+      <%= link_to "ログインに戻る", new_user_session_path %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "ログインリンクを送信" %>
-  </div>
-<% end %>
-
-<%= link_to "新しいアカウントを作成する", new_user_registration_path %>
-<%= link_to "ログインに戻る", new_user_session_path %>
+</div>
