--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,20 @@
-<div class="container my-4">
-  <div class="row mb-4">
-    <h2>新規登録</h2>
-  </div>
-
+<div class="container my-4 wf-mplus1p">
+  <h2 class="mb-4 mx-1">新規登録</h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="row mb-2">
+    <div class="m-1">
       <label for="exampleFormControlInput1" class="form-label">
         <%= f.label "ユーザーネーム" %>
       </label>
       <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", id: "exampleFormControlInput1" %>
     </div>
-
-    <div class="row mt-4">
-    <label for="exampleFormControlInput1" class="form-label">
-      <%= f.label "メールアドレス" %>
-    </label>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "exampleFormControlInput1" %>
+    <div class="m-1">
+      <label for="exampleFormControlInput1" class="form-label">
+        <%= f.label "メールアドレス" %>
+      </label>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "exampleFormControlInput1" %>
     </div>
-
-    <div class="row mt-4">
+    <div class="m-1">
       <label for="exampleFormControlInput1" class="form-label">
         <%= f.label "パスワード" %>
       </label>
@@ -29,19 +24,19 @@
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control", id: "exampleFormControlInput1" %>
     </div>
 
-    <div class="row mt-4">
+    <div class="m-1">
       <label for="exampleFormControlInput1" class="form-label">
         <%= f.label "パスワード（確認用）" %>
       </label>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", id: "exampleFormControlInput1" %>
     </div>
 
-    <div class="row mt-4 mb-3">
+    <div class="mt-4 mb-3 mx-1">
       <%= f.submit "登録する", class: "btn btn-outline-info" %>
     </div>
   <% end %>
 
-  <div class="row mt-4">
+  <div class="mt-4 mx-1">
     <p>※アカウントをお持ちの方はこちらから
       <%= link_to "ログイン", new_user_session_path %>
     </p>
