--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -9,8 +9,8 @@
         <%= link_to user_path(user) do %>
         <p class="caption h4"><%= user.name %></p>
         <div class="d-flex">
-          <%= attachment_image_tag @user, :profile_image, size: '50x50', fallback: "no_image.png", class: "mb-3 mt-3 ml-3 profile-img" %>
-          <h4 class="ml-5"><%= user.profile %></h4>
+          <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "icon.jpg", class: "mb-3 mt-3 ml-3 profile-image" %>
+          <h4 class="ml-5"><%#= user.profile %></h4>
         </div>
         <p class="caption"><%= "#{user.posts.count} 投稿" %></p>
         <% end %>
