--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid wf-mplus1p">
+<div class="container wf-mplus1p">
   <div class="carousel slide" id="sample" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#sample" data-slide-to="0" class="active"></li>
@@ -7,21 +7,21 @@
     </ol>
     <div class="carousel-inner">
     <div class="carousel-item active"><%= image_tag 'top1.jpeg', class: "d-block w-100" %>
-      <div class="carousel-caption d-none d-sm-block ">
-        <h2>愛犬とのくらしを</h3>
-        <h2>もっと豊かに</h3>
+      <div class="carousel-caption d-none d-sm-block">
+        <p>愛犬とのくらしを</p>
+        <p>もっと豊かに</p>
       </div>
     </div>
     <div class="carousel-item"><%= image_tag 'top2.jpeg', class: "d-block w-100" %>
       <div class="carousel-caption d-none d-sm-block">
-        <h2>ドッグランやカフェに</h3>
-        <h2>一緒にお出かけ</h3>
+        <p>ドッグランやカフェに</p>
+        <p>一緒にお出かけ</p>
       </div>
     </div>
     <div class="carousel-item"><%= image_tag 'top3.jpeg', class: "d-block w-100" %>
       <div class="carousel-caption d-none d-sm-block">
-        <h2>近くの飼い主さんとのつながりで</h3>
-        <h2>より充実した休日を</h3>
+        <p>犬好きの人とのつながりで</p>
+        <p>より充実した休日を</p>
       </div>
     </div>
     <a href="#sample" class="carousel-control-prev" data-slide="prev">
@@ -35,8 +35,15 @@
   </div>
 </div>
 <div class="container wf-mplus1p">
-  <h2 class="m-3">愛犬との暮らしを豊かにするお出かけを</h2>
-  <h3 class="m-3">お出かけスポットを探す</h3>
+  <h2 class="m-3 slogan">愛犬との暮らしを豊かにするお出かけを</h2>
+</div>
+<div class="container wf-mplus1p">
+  <h4 class="m-3">お出かけスポットを探す</h4>
+  <%= link_to "map",places_path, class: "btn btn-outline-info m-3" %>
+</div>
+<div class="container wf-mplus1p">
+  <h4 class="m-3">お出かけスポットを登録する</h4>
+  <%= link_to "new",new_place_path, class: "btn btn-outline-info m-3" %>
 </div>
 
     <!-- Optional JavaScript -->
