--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <%= form_with model:@user, local:true do |f| %>
     <div class="row m-1">
       <div class="col-sm-4">
-        <%= attachment_image_tag @user, :profile_image,:fill, 200, 200, format:'jpeg', fallback:"", class: "profile_image"%>
+        <%= attachment_image_tag @user, :profile_image, format:'jpeg', fallback:"icon.jpg", size:"200x200", class: "profile_image"%>
       </div>
       <div class="col-sm-8">
         <label for="inputImage">プロフィール画像を変更</label>
