--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,34 +1,52 @@
-<h3>新規スポットを登録</h3>
-<%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"" %>
-<%= @user.name %>
+<div class="container my-4 wf-mplus1p">
+  <h2 class="mb-4 mx-1">新規スポットを登録</h2>
 
-<%= form_with model: @place, url: places_path, local:true do |f| %>
-  <h4>画像</h4>
-  <%= f.attachment_field :image %>
-  <h4>施設名</h4>
-  <%= f.text_field :name %>
-  <h4>場所</h4>
-  <%= f.text_field :address %>
-  <h4>料金</h4>
-  <%= f.text_field :price %>
-  <H4>カテゴリー</H4>
-  <%= f.radio_button :category, Place.categories.key(0), checked: true %>
-  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
-  <%= f.label "ドッグラン" %>
-  <%= f.radio_button :category, Place.categories.key(1) %>
-  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
-  <%= f.label "ドッグカフェ" %>
-  <%= f.radio_button :category, Place.categories.key(2) %>
-  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
-  <%= f.label "カフェ・レストラン（犬の店内利用可）" %>
-  <%= f.radio_button :category, Place.categories.key(3) %>
-  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
-  <%= f.label "公園" %>
-  <%= f.radio_button :category, Place.categories.key(4) %>
-  <%#= f.label :category, Place.categories_i18n[:dog_run] %>
-  <%= f.label "自然" %>
-
-  <h4>詳細</h4>
-  <%= f.text_area :detail %>
-  <%= f.submit '投稿' %>
-<% end %>
+  <%= form_with model: @place, url: places_path, local:true do |f| %>
+    <div class="my-3 mx-1">
+      <label for="inputImage">画像</label><br />
+      <%= f.attachment_field :place_images_images, multiple: true %>
+    </div>
+    <div class="m-1">
+      <label for="exampleFormControlInput1" class="form-label">
+        <%= f.label "スポット名" %><br />
+      </label>
+      <%= f.text_field :name, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+    </div>
+    <div class="m-1">
+      <label for="exampleFormControlInput1" class="form-label">
+        <%= f.label "場所" %><br />
+      </label>
+      <%= f.text_field :address, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+    </div>
+    <div class="m-1">
+      <label for="exampleFormControlInput1" class="form-label">
+        <%= f.label "料金" %><br />
+      </label>
+      <%= f.text_field :price, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+    </div>
+    <div class="my-4 mx-1">
+      <label for="exampleFormControlInput1" class="form-label">
+        <%= f.label "カテゴリー" %>
+      </label><br />
+      <%= f.radio_button :category, Place.categories.key(0), checked: true %>
+      <%= f.label "ドッグラン" %>
+      <%= f.radio_button :category, Place.categories.key(1) %>
+      <%= f.label "ドッグカフェ" %>
+      <%= f.radio_button :category, Place.categories.key(2) %>
+      <%= f.label "カフェ・レストラン（犬の店内利用可）" %>
+      <%= f.radio_button :category, Place.categories.key(3) %>
+      <%= f.label "公園" %>
+      <%= f.radio_button :category, Place.categories.key(4) %>
+      <%= f.label "自然" %>
+    </div>
+    <div class="m-1">
+      <label for="exampleFormControlInput1" class="form-label">
+        <%= f.label "詳細" %><br />
+      </label>
+      <%= f.text_area :detail, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+    </div>
+    <div class="mt-4 mb-3 mx-1">
+      <%= f.submit "登録する", class: "btn btn-outline-info" %>
+    </div>
+  <% end %>
+</div>
