--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,11 +1,49 @@
-<%= @place.name %>
-<%= attachment_image_tag @place, :image, format: 'jpeg', size: "300x300" %><br>
-<%= @place.category_i18n %>
-<%= @place.address %>
-<%= @place.price %>
-<%= @place.detail %>
+<div class="container my-4 wf-mplus1p">
+  <h3><%= @place.name %></h3>
+<div id="carouselExampleIndicators" class="carousel slide w-50" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <% @place.place_images.each_with_index do |image, i| %>
+    <li data-target="#carouselExampleIndicators" data-slide-to="<%= i %>" class="<%= (i == 0 )? 'active':'' %>"></li>
+    <% end %>
+  </ol>
+  <div class="carousel-inner">
+     <% @place.place_images.each_with_index do |image, i| %>
+        <div class="carousel-item <%= (i == 0 )? 'active':'' %>">
+          <%= attachment_image_tag image, :image, :fill, 300, 300, format: 'jpeg', class:'w-100 d-block' %><br>
+        </div>
+      <% end %>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-<div id="map" style="width: 100%; height: 300px;"></div>
+  <table class="table table-bordered my-4 mx-1">
+    <tr>
+      <th>カテゴリー</th>
+      <td><%= @place.category_i18n %></td>
+    </tr>
+    <tr>
+      <th>住所</th>
+      <td><%= @place.address %></td>
+    </tr>
+    <tr>
+      <th>料金</th>
+      <td><%= @place.price %></td>
+    </tr>
+    <tr>
+      <th>詳細</th>
+      <td><%= @place.detail %></td>
+    </tr>
+  </table>
+</div>
+
+<div id="map" class="container" style="height: 300px;"></div>
 
 <script>
   function initMap() {
@@ -34,11 +72,28 @@
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API'] %>&callback=initMap" async defer></script>
 
+<%#= link_to 'スポット一覧ページへ', places_path %>
+<div class="container">
+  <p class="my-2 mx-1">
+    <%= link_to 'スポットの情報を編集する', edit_place_path(@place.id) , class: "btn btn-outline-secondary" %>
+  </p>
+</div>
 
-
-<%= link_to 'スポット一覧ページへ', places_path %>
-
-
-
-<%= link_to '編集する', edit_place_path(@place.id) %><br>
-<%= link_to '削除する', place_path(@place.id),method: :delete, "data-confirm"=>"本当に消しますか？" %><br>
+<div class="container my-5 wf-mplus1p">
+  <div class="row">
+<% @posts.each do |post| %>
+<div class="col-4">
+  <div class="m-1">
+    <%= attachment_image_tag post.user, :profile_image, format:'jpeg', fallback:"icon.jpg", size:"70x70", class: "profile_image" %>
+    <%= post.user.name %></br>
+  </div>
+  <%= link_to post_path(post.id) do %>
+    <%= attachment_image_tag post, :image ,:fill, 300, 300, class:"w-100" %>
+  <% end %>
+  <%= post.created_at.strftime('%Y/%m/%d') %></br>
+  <!--投稿日時-->
+  <%= post.body %>
+</div>
+<% end %>
+</div>
+</div>
