--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,18 @@
 <div class="container my-4 wf-mplus1p">
   <h3>新規投稿を作成</h3>
-  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image"%>
+  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"icon.jpg", size:"100x100", class: "profile_image"%>
   <%= @user.name %>
 
   <%= form_with model: @post, url: posts_path, local:true do |f| %>
-    <h4>画像</h4>
-    <%= f.attachment_field :image %>
-    <%= f.collection_select :place_id, @place, :id, :name %>
-    <h4>本文</h4>
-    <%= f.text_area :body %>
-    <%= f.submit '投稿' %>
+    <div class="m-3">
+      <h4>画像</h4>
+      <%= f.attachment_field :image, multiple: true %>
+      <%= f.collection_select :place_id, @place, :id, :name %>
+    </div>
+    <div class="m-3">
+      <h4>本文</h4>
+      <%= f.text_area :body, class: "form-control"%>
+      <%= f.submit '投稿する', class: "btn btn-outline-info my-3" %>
+    </div>
   <% end %>
 </div>
