--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,22 @@
-<%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %><br>
-<p><%= @post.body %></p>
+<div class="container my-5 wf-mplus1p">
+  <div class="m-2">
+    <%= link_to user_path(@post.id) do %>
+    <%= attachment_image_tag @post.user, :profile_image, format:'jpeg', fallback:"icon.jpg", size:"70x70", class: "profile_image" %>
+    <%= @post.user.name %></br>
+    <% end %>
+  </div>
+<%= attachment_image_tag @post, :image, :fill, 300, 300 %><br>
+<p class="m-2"><%= @post.body %></p>
 <% if @post.liked_by?(current_user) %>
   <p>
     <%= link_to likes_path(@post), method: :delete do %>
-      ♥<%= @post.likes.count %> いいね
+      ♥<%= @post.likes.count %>
     <% end %>
   </p>
 <% else %>
   <p>
     <%= link_to likes_path(@post), method: :post do %>
-      ♡<%= @post.likes.count %> いいね
+      ♡<%= @post.likes.count %>
     <% end %>
   </p>
 <% end %>
@@ -17,24 +24,27 @@
 <div>
   <p>コメント件数：<%= @post.comments.count %></p>
   <% @post.comments.each do |comment| %>
+    <%= link_to user_path(comment.id) do %>
     <%= comment.user.name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %>
+    <% end %>:
+    <%= comment.created_at.strftime('%Y/%m/%d') %>：
     <%= comment.comment %>
-    <% if post_comment.user == current_user %>
-    <div>
-      <%= link_to "削除", comment_path(comment.post, comment), method: :delete %>
-    </div>
+    <% if comment.user == current_user %>
+    <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, class:"btn btn-outline-warning btn-sm" %>
     <% end %>
   <% end %>
 </div>
-<div>
-  <%= form_with(model:[@post, @comment], local: true) do |f| %>
-    <%= f.text_area :comment, rows:'5',placeholder: "コメント入力" %>
-    <%= f.submit "投稿" %>
-  <% end %>
-</div>
+<% if user_signed_in? %>
+  <div class="my-5">
+    <%= form_with(model:[@post,@comment], local: true) do |f| %>
+      <%= f.text_area :comment, rows:'3',placeholder: "コメント入力", class: "form-control" %>
+      <%= f.submit "投稿", class:"btn btn-outline-info m-2" %>
+    <% end %>
+  </div>
+<% end %>
  <% if @post.user == current_user %>
   <%= link_to '編集する', edit_post_path(@post.id) %><br>
   <%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？" %><br>
-<% end %>  
-<%= link_to '投稿一覧ページへ', posts_path %>
+<% end %>
+<%= link_to '<<スポット詳細ページへ戻る', place_path(@post.id) %>
+</div>
