[Add]権限・バリデーションの設定

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -9,7 +9,7 @@
     <div class="carousel-item active"><%= image_tag 'top1.jpeg', class: "d-block w-100" %>
       <div class="carousel-caption d-none d-sm-block">
         <p>愛犬とのくらしを</p>
-        <p>もっと豊かに</p>
+        <p>もっと楽しむ</p>
       </div>
     </div>
     <div class="carousel-item"><%= image_tag 'top2.jpeg', class: "d-block w-100" %>
@@ -35,14 +35,14 @@
   </div>
 </div>
 <div class="container wf-mplus1p">
-  <h2 class="m-3 slogan">愛犬との暮らしを豊かにするお出かけを</h2>
+  <h2 class="m-3 slogan">~愛犬とのくらしをもっと豊かに~</h2>
 </div>
-<div class="container wf-mplus1p">
-  <h4 class="m-3">お出かけスポットを探す</h4>
+<div class="container wf-mplus1p my-5">
+  <h5 class="m-3">お出かけスポットを探す</h5>
   <%= link_to "map",places_path, class: "btn btn-outline-info m-3" %>
 </div>
-<div class="container wf-mplus1p">
-  <h4 class="m-3">お出かけスポットを登録する</h4>
+<div class="container wf-mplus1p my-5">
+  <h5 class="m-3">お出かけスポットを登録する</h5>
   <%= link_to "new",new_place_path, class: "btn btn-outline-info m-3" %>
 </div>
 
