--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -4,25 +4,25 @@
   <%= form_with model: @place, url: place_path, local:true do |f| %>
     <div class="my-3 mx-1">
       <label for="inputImage">画像</label><br />
-      <%= f.attachment_field :place_images_images, multiple: true %>
+      <%= f.attachment_field :place_images_images, multiple: true, required: true %>
     </div>
     <div class="m-1">
       <label for="exampleFormControlInput1" class="form-label">
         <%= f.label "スポット名" %><br />
       </label>
-      <%= f.text_field :name, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+      <%= f.text_field :name, autofocus: true, class: "form-control", id: "exampleFormControlInput1",　required: true %>
     </div>
     <div class="m-1">
       <label for="exampleFormControlInput1" class="form-label">
         <%= f.label "場所" %><br />
       </label>
-      <%= f.text_field :address, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+      <%= f.text_field :address, autofocus: true, class: "form-control", id: "exampleFormControlInput1",　required: true %>
     </div>
     <div class="m-1">
       <label for="exampleFormControlInput1" class="form-label">
         <%= f.label "料金" %><br />
       </label>
-      <%= f.text_field :price, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
+      <%= f.text_field :price, autofocus: true, class: "form-control", id: "exampleFormControlInput1",　required: true %>
     </div>
     <div class="my-4 mx-1">
       <label for="exampleFormControlInput1" class="form-label">
