--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,12 +6,12 @@
   <%= form_with model: @post, url: posts_path, local:true do |f| %>
     <div class="m-3">
       <h4>画像</h4>
-      <%= f.attachment_field :image, multiple: true %>
+      <%= f.attachment_field :image, multiple: true, required: true %>
       <%= f.collection_select :place_id, @place, :id, :name %>
     </div>
     <div class="m-3">
       <h4>本文</h4>
-      <%= f.text_area :body, class: "form-control"%>
+      <%= f.text_area :body, class: "form-control", required: true %>
       <%= f.submit '投稿する', class: "btn btn-outline-info my-3" %>
     </div>
   <% end %>
