--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,24 +7,26 @@
   </div>
 <%= attachment_image_tag @post, :image, :fill, 300, 300 %><br>
 <p class="m-2"><%= @post.body %></p>
+<% if user_signed_in? %>
 <% if @post.liked_by?(current_user) %>
   <p>
-    <%= link_to likes_path(@post), method: :delete do %>
+    <%= link_to post_likes_path(@post), method: :delete do %>
       ♥<%= @post.likes.count %>
     <% end %>
   </p>
 <% else %>
   <p>
-    <%= link_to likes_path(@post), method: :post do %>
+    <%= link_to post_likes_path(@post), method: :post do %>
       ♡<%= @post.likes.count %>
     <% end %>
   </p>
+<% end %>
 <% end %>
 
 <div>
   <p>コメント件数：<%= @post.comments.count %></p>
   <% @post.comments.each do |comment| %>
-    <%= link_to user_path(comment.id) do %>
+    <%= link_to user_path(comment.user.id) do %>
     <%= comment.user.name %>
     <% end %>:
     <%= comment.created_at.strftime('%Y/%m/%d') %>：
