--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -13,6 +13,7 @@
         </div>
       <% end %>
   </div>
+  <% if @place.place_images.count >= 2 %>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -21,6 +22,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+  <% end %>
 </div>
 
   <table class="table table-bordered my-4 mx-1">
