--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,14 +1,21 @@
-<h3>投稿を編集</h3>
-<%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image" %>
-<%= @user.name %>
+<div class="container my-4 wf-mplus1p">
+  <h3>投稿を編集</h3>
+  <%= attachment_image_tag @user, :profile_image,:fill, 100, 100, format:'jpeg', fallback:"", class: "profile_image" %>
+  <%= @user.name %>
 
-<%= form_with model: @post, url: posts_path, local:true do |f| %>
-  <h4>画像</h4>
-  <%= f.attachment_field :image %>
-  <h4>本文</h4>
-  <%= f.text_area :body %>
-  <%= f.submit '投稿' %>
-<% end %>
-<% if @post.user == current_user %>
-  <%= link_to "削除", post_path(@post), method: :delete %>
-<% end %>
+  <%= form_with model: @post, url: posts_path, local:true do |f| %>
+    <div class="m-3">
+      <h4>画像</h4>
+      <%= f.attachment_field :image %>
+    </div>
+    <div class="m-3">
+      <h4>本文</h4>
+      <%= f.text_area :body, class: "form-control", required: true %>
+      <%= f.submit '投稿する', class: "btn btn-outline-info mt-4" %>
+      <% if @post.user == current_user %>
+        <%= link_to "削除する", post_path(@post), method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-outline-warning mt-4" %>
+      <% end %>
+    </div>
+  <% end %>
+
+</div>
