--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 		<div class="col-sm-6 xxx" style="padding-top: 30px;">
 			<%= @user.name %>
 			<% if current_user ==@user %>
-			  <%= link_to "プロフィールを編集", edit_user_path(@user.id) %></br>
+			  <%= link_to "プロフィールを編集", edit_user_path(@user.id), class: "btn btn-outline-secondary btn-sm" %></br>
 			<% end %>
       <%= link_to follows_user_path(@user) do %>
         <span>フォロー<%= @following_users.count %></span>
@@ -16,12 +16,14 @@
       <% end %>
 		</div>
 		<div class="col-sm-4">
+		  <% if user_signed_in? %>
 		  <% if current_user != @user %>
         <% if current_user.following?(@user) %>
           <%= link_to 'フォローを外す', user_relationship_path(@user.id), method: :delete, class: "btn-sm btn-danger" %>
         <% else %>
           <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST, class:"btn-sm btn-success" %>
         <% end %>
+      <% end %>
       <% end %>
 		</div>
   </div>
