[Fix]jpeg file 拡張子修正

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,19 +6,19 @@
       <li data-target="#sample" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-    <div class="carousel-item active"><%= image_tag 'top1.jpeg', class: "d-block w-100" %>
+    <div class="carousel-item active"><%= image_tag 'top1.jpg', class: "d-block w-100" %>
       <div class="carousel-caption d-none d-sm-block">
         <p>愛犬とのくらしを</p>
         <p>もっと楽しむ</p>
       </div>
     </div>
-    <div class="carousel-item"><%= image_tag 'top2.jpeg', class: "d-block w-100" %>
+    <div class="carousel-item"><%= image_tag 'top2.jpg', class: "d-block w-100" %>
       <div class="carousel-caption d-none d-sm-block">
         <p>ドッグランやカフェに</p>
         <p>一緒にお出かけ</p>
       </div>
     </div>
-    <div class="carousel-item"><%= image_tag 'top3.jpeg', class: "d-block w-100" %>
+    <div class="carousel-item"><%= image_tag 'top3.jpg', class: "d-block w-100" %>
       <div class="carousel-caption d-none d-sm-block">
         <p>犬好きの人とのつながりで</p>
         <p>より充実した休日を</p>
