--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -3,31 +3,23 @@
 
   <%= form_with model: @place, url: place_path, local:true do |f| %>
     <div class="my-3 mx-1">
-      <label for="inputImage">画像</label><br />
+      <%= f.label "画像" %><br>
       <%= f.attachment_field :place_images_images, multiple: true, required: true %>
     </div>
     <div class="m-1">
-      <label for="exampleFormControlInput1" class="form-label">
-        <%= f.label "スポット名" %><br />
-      </label>
+      <%= f.label "スポット名" %><br>
       <%= f.text_field :name, autofocus: true, class: "form-control", id: "exampleFormControlInput1",　required: true %>
     </div>
     <div class="m-1">
-      <label for="exampleFormControlInput1" class="form-label">
-        <%= f.label "場所" %><br />
-      </label>
+      <%= f.label "場所" %><br>
       <%= f.text_field :address, autofocus: true, class: "form-control", id: "exampleFormControlInput1",　required: true %>
     </div>
     <div class="m-1">
-      <label for="exampleFormControlInput1" class="form-label">
-        <%= f.label "料金" %><br />
-      </label>
+      <%= f.label "料金" %><br>
       <%= f.text_field :price, autofocus: true, class: "form-control", id: "exampleFormControlInput1",　required: true %>
     </div>
     <div class="my-4 mx-1">
-      <label for="exampleFormControlInput1" class="form-label">
-        <%= f.label "カテゴリー" %>
-      </label><br />
+      <%= f.label "カテゴリー" %><br>
       <%= f.radio_button :category, Place.categories.key(0), checked: true %>
       <%= f.label "ドッグラン" %>
       <%= f.radio_button :category, Place.categories.key(1) %>
@@ -40,9 +32,7 @@
       <%= f.label "自然" %>
     </div>
     <div class="m-1">
-      <label for="exampleFormControlInput1" class="form-label">
-        <%= f.label "詳細" %><br />
-      </label>
+      <%= f.label "詳細" %><br>
       <%= f.text_area :detail, autofocus: true, class: "form-control", id: "exampleFormControlInput1"%>
     </div>
     <div class="mt-4 mb-3 mx-1">
