--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,16 +5,16 @@
         <%= attachment_image_tag @user, :profile_image, format:'jpeg', fallback:"icon.jpg", size:"200x200", class: "profile_image"%>
       </div>
       <div class="col-sm-8">
-        <label for="inputImage">プロフィール画像を変更</label>
+        <%= f.label"プロフィール画像を変更" %>
         <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
       </div>
     </div>
     <div class="m-1">
-      <label for="inputName">ユーザーネーム</label>
+      <%= f.label"ユーザーネーム" %>
       <%= f.text_field :name, autofocus: true, placeholder:"ユーザーネーム", class: "form-control", id: "exampleFormControlInput1"%>
     </div>
     <div class="m-1">
-      <label for="inputEmail">メールアドレス</label>
+      <%= f.label"メールアドレス" %>
       <%= f.email_field :email, autofocus: true, placeholder:"email", class: "form-control", id: "exampleFormControlInput1"%>
     </div>
     <div class="mt-4 mb-3 mx-1">
